--- a/src/qt/res/css/dark.css
+++ b/src/qt/res/css/dark.css
@@ -1599,3 +1599,141 @@ border:1px solid #333;
 QWidget#MasternodeList QTableWidget#tableWidgetMasternodesDIP3 {
 color: #aaa;
 }
+
+/* FUTURE TX PAGE */
+
+QDialog#SendFuturesDialog .QScrollArea#scrollArea .QWidget#scrollAreaWidgetContents {
+    background-color:transparent;
+}
+
+QWidget#SendFuturesDialog .QScrollArea#scrollArea .QLabel#payFromLabel {
+background-color: #555;
+min-width:102px;
+font-weight:normal;
+/*font-size:11px;*/
+color: #ccc;
+min-height:25px;
+margin-right:5px;
+padding-right:5px;
+}
+
+QWidget#SendFuturesDialog .QScrollArea#scrollArea .QLabel#payToLabel {
+background-color: #555;
+min-width:102px;
+font-weight:normal;
+/*font-size:11px;*/
+color: #ccc;
+min-height:25px;
+margin-right:5px;
+padding-right:5px;
+}
+
+QWidget#SendFuturesDialog .QScrollArea#scrollArea .QLabel#labellLabel {
+background-color: #555;
+min-width:102px;
+font-weight:normal;
+/*font-size:11px;*/
+color: #ccc;
+min-height:25px;
+margin-right:5px;
+padding-right:5px;
+}
+
+QWidget#SendFuturesDialog .QScrollArea#scrollArea .QLabel#amountLabel { /* Amount Label */
+background-color: #999;
+min-width:102px;
+font-weight:normal;
+/*font-size:11px;*/
+color: #444;
+min-height:25px;
+margin-right:5px;
+padding-right:5px;
+}
+
+QWidget#SendFuturesDialog .QScrollArea#scrollArea .QLabel#ftxMaturityLabel {
+background-color: #555;
+min-width:102px;
+font-weight:normal;
+/*font-size:11px;*/
+color: #ccc;
+min-height:25px;
+margin-right:5px;
+padding-right:5px;
+}
+
+QWidget#SendFuturesDialog .QScrollArea#scrollArea .QLabel#ftxLockTimeLabel {
+background-color: #555;
+min-width:102px;
+font-weight:normal;
+/*font-size:11px;*/
+color: #ccc;
+min-height:25px;
+margin-right:5px;
+padding-right:5px;
+}
+
+QTableView#payFromTable { /* Table - has to be selected as a class otherwise it throws off QCalendarWidget */
+border: 0px solid #444;
+background-color: #333;
+}
+
+QTableView#payFromTable::item { /* Table Item */
+background-color: #333;
+font-size:12px;
+color: #aaa;
+}
+
+QTableView#payFromTable::item:selected { /* Table Item Selected */
+background-color: #555;
+color: #ccc;
+}
+
+QStackedWidget#SendFuturesEntry .QToolButton { /* General Settings for Pay To Icons */
+background-color:transparent;
+padding-left:5px;
+padding-right:5px;
+border: 0;
+outline: 0;
+}
+
+QStackedWidget#SendFuturesEntry .QToolButton#addressBookButton { /* Address Book Button */
+padding-left:10px;
+}
+
+QStackedWidget#SendFuturesEntry .QToolButton#addressBookButton {
+}
+
+QStackedWidget#SendFuturesEntry .QToolButton#pasteButton {
+}
+
+QStackedWidget#SendFuturesEntry .QToolButton#deleteButton {
+}
+
+QStackedWidget#SendFuturesEntry .QLineEdit#addAsLabel { /* Pay To Input Field */
+}
+
+QDateTimeEdit::drop-down {
+width:25px;
+border:0px;
+}
+
+QDateTimeEdit::down-arrow {
+border-image: url(':/images/arrow_down') 0 0 0 0 stretch stretch;
+}
+
+QDialog#SendFuturesDialog .QPushButton#clearButton { /* Clear Button */
+background-color: #ddd;
+border: 0;
+color: #444;
+padding-left:10px;
+padding-right:10px;
+}
+
+QDialog#SendFuturesDialog .QPushButton#clearButton:hover {
+background-color: #aaa;
+color: #333;
+}
+
+QDialog#SendFuturesDialog .QPushButton#clearButton:pressed {
+border:1px solid #9e9e9e;
+}
