--- a/src/qt/res/css/light.css
+++ b/src/qt/res/css/light.css
@@ -1533,4 +1533,110 @@ QDialog#TransactionDescDialog QTextEdit { /* Contents of Receive Coin Dialog */
 border:1px solid #d7d7d7;
 }
 
+/* FUTURE TX PAGE */
 
+QDialog#SendFuturesDialog .QScrollArea#scrollArea .QWidget#scrollAreaWidgetContents {
+background:#ffffff;
+}
+
+QWidget#SendFuturesDialog .QScrollArea#scrollArea .QLabel#payFromLabel {
+background-color:#F8F6F6;
+border: 1px solid #fff;
+min-width:102px;
+color:#333;
+/*font-weight:bold;
+font-size:11px;*/
+padding-right:5px;
+}
+
+QWidget#SendFuturesDialog .QScrollArea#scrollArea .QLabel#payToLabel {
+background-color:#F8F6F6;
+border: 1px solid #fff;
+min-width:102px;
+color:#333;
+/*font-weight:bold;
+font-size:11px;*/
+padding-right:5px;
+}
+
+QWidget#SendFuturesDialog .QScrollArea#scrollArea .QLabel#labellLabel {
+background-color:#F8F6F6;
+border: 1px solid #fff;
+min-width:102px;
+color:#333;
+/*font-weight:bold;
+font-size:11px;*/
+padding-right:5px;
+}
+
+QWidget#SendFuturesDialog .QScrollArea#scrollArea .QLabel#amountLabel { /* Amount Label */
+background-color:#999;
+border: 1px solid #fff;
+min-width:102px;
+color:#ffffff;
+/*font-weight:bold;
+font-size:11px;*/
+padding-right:5px;
+}
+
+QWidget#SendFuturesDialog .QScrollArea#scrollArea .QLabel#ftxMaturityLabel {
+background-color:#F8F6F6;
+border: 1px solid #fff;
+min-width:102px;
+color:#333;
+/*font-weight:bold;
+font-size:11px;*/
+padding-right:5px;
+}
+
+QWidget#SendFuturesDialog .QScrollArea#scrollArea .QLabel#ftxLockTimeLabel {
+background-color:#F8F6F6;
+border: 1px solid #fff;
+min-width:102px;
+color:#333;
+/*font-weight:bold;
+font-size:11px;*/
+padding-right:5px;
+}
+
+QTableView#payFromTable { /* Table - has to be selected as a class otherwise it throws off QCalendarWidget */
+border:1px solid #fff;
+padding: 2px;
+}
+
+QTableView#payFromTable::item { /* Table Item */
+background-color:#FFFFFF;
+font-size:12px;
+}
+
+QTableView#payFromTable::item:selected { /* Table Item Selected */
+background-color:#F8F6F6;
+color:#333;
+font-weight: bold;
+}
+
+QDateTimeEdit::drop-down {
+width:25px;
+border:0px;
+}
+
+QDateTimeEdit::down-arrow {
+border-image: url(':/images/arrow_down') 0 0 0 0 stretch stretch;
+}
+
+QDialog#SendFuturesDialog .QPushButton#clearButton { /* Clear Button */
+background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: .01 #f6f6f6, stop: .1 rgba(250, 250, 250, 128), stop: .95 rgba(250, 250, 250, 255), stop: 1 #ebebeb);
+border:1px solid #d2d2d2;
+color:#616161;
+padding-left:10px;
+padding-right:10px;
+}
+
+QDialog#SendFuturesDialog .QPushButton#clearButton:hover {
+background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: .01 #f6f6f6, stop: .1 rgba(240, 240, 240, 255), stop: .95 rgba(240, 240, 240, 255), stop: 1 #ebebeb);
+color:#333;
+}
+
+QDialog#SendFuturesDialog .QPushButton#clearButton:pressed {
+border:1px solid #9e9e9e;
+}
